--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             touch-action: none;
         }
     </style>
-     <script src="babylon.custom.js"></script>
+     <script src="project/babylon.custom.js"></script>
 
 
 </head>
